--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "dompurify": "^2.2.8",
     "enzyme": "^3.11.0",
+    "material-ui-image": "^3.3.2",
     "moxios": "^0.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
