--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "underscore": "^1.13.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
