--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "underscore": "^1.13.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
