--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.1.1",
     "dompurify": "^2.2.8",
     "enzyme": "^3.11.0",
+    "formik": "^2.2.8",
     "material-ui-image": "^3.3.2",
     "moxios": "^0.4.0",
     "prop-types": "^15.7.2",
