--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^2.2.8",
     "enzyme": "^3.11.0",
     "formik": "^2.2.8",
+    "history": "^5.0.0",
     "material-ui-image": "^3.3.2",
     "moxios": "^0.4.0",
     "prop-types": "^15.7.2",
